--- a/src/components/authentication/PasswordResetForm.module.css
+++ b/src/components/authentication/PasswordResetForm.module.css
@@ -1,27 +1,39 @@
-.signupForm {
+.loginForm {
+  position: relative;
   width: 90%;
   padding: 1rem;
   display: flex;
   flex-direction: column;
-
   transition: transform 0.5s ease;
 }
 
 .scaleUp {
   transform: scale(1);
+  filter: blur(0px);
 }
 .scaleDown {
   transform: scale(0);
-  filter: blur(0.1rem);
+  filter: blur(10px);
 }
 
-.signupForm h2 {
+.loginForm h2 {
   margin-bottom: 1rem;
   font-weight: 700;
   font-size: 2rem;
 }
 
-.signupForm input {
+.loginForm button {
+  width: fit-content;
+  padding: 0.5rem 1rem;
+  margin-top: 1rem;
+  border: none;
+  border-radius: 0.5rem;
+  font-size: 1.2rem;
+  color: white;
+  background-color: var(--accent-color);
+}
+
+.loginForm input {
   height: 2.8rem;
   padding: 1rem;
   margin-bottom: 1rem;
@@ -34,16 +46,6 @@
   &:focus {
     border: 2px solid var(--accent-color);
   }
-}
-
-.signupForm button {
-  width: fit-content;
-  padding: 0.5rem 1rem;
-  border: none;
-  border-radius: 0.5rem;
-  font-size: 1.2rem;
-  color: white;
-  background-color: var(--accent-color);
 }
 
 .verificationCodeBox {
