--- a/src/components/authentication/LogInForm.module.css
+++ b/src/components/authentication/LogInForm.module.css
@@ -1,4 +1,5 @@
 .loginForm {
+  position: relative;
   width: 90%;
   padding: 1rem;
   display: flex;
@@ -45,4 +46,15 @@
   &:focus {
     border: 2px solid var(--accent-color);
   }
+}
+
+.passwordReset {
+  width: fit-content;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.message {
+  margin-top: 1rem;
+  color: red;
 }
